Druga beta verzija

--- a/www/index.html
+++ b/www/index.html
@@ -13,27 +13,27 @@
         <script type="text/javascript" src="js/libs/jquery-2.1.4.min.js"></script>
         <script type="text/javascript" src="js/libs/jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="js/libs/turn.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-        <script type="text/javascript" src="js/catalog.js"></script>
+        <script type="text/javascript" src="js/lister.js"></script>
+        <script type="text/javascript" src="js/tables.js"></script>
     </head>
     <body>
         <!-- LISTER PAGE -->
-        <div data-role="page" id="lister-page" data-theme="b">
+        <div data-role="page" id="lister-page">
             <div class="flipbook-viewport">
                 <div class="flipbook">
-                    <div id="page1" style="background-image:url(pages/page_1.jpg)"></div>
-                    <div id="page2" style="background-image:url(pages/page_2.jpg)"></div>
-                    <div id="page3" style="background-image:url(pages/page_3.jpg)"></div>
-                    <div id="page4" style="background-image:url(pages/page_4.jpg)"></div>
-                    <div id="page5" style="background-image:url(pages/page_5.jpg)"></div>
-                    <div id="page6" style="background-image:url(pages/page_1.jpg)"></div>
-                    <div id="page7" style="background-image:url(pages/page_2.jpg)"></div>
+                    <div id="page1" style="background-image:url(pages/si/page_1.jpg)"></div>
+                    <div id="page2" style="background-image:url(pages/si/page_2.jpg)"></div>
+                    <div id="page3" style="background-image:url(pages/si/page_3.jpg)"></div>
+                    <div id="page4" style="background-image:url(pages/si/page_4.jpg)"></div>
+                    <div id="page5" style="background-image:url(pages/si/page_5.jpg)"></div>
+                    <div id="page6" style="background-image:url(pages/si/page_1.jpg)"></div>
+                    <div id="page7" style="background-image:url(pages/si/page_2.jpg)"></div>
                 </div>
             </div>
         </div>
 
         <!-- TABLES PAGE -->
-        <div data-role="page" id="tables-page" data-theme="b">
+        <div data-role="page" id="tables-page">
             <div data-role="header">
                 <div class="lang-icon" id="lng-en" style="background: url(img/gb.png);"></div>
                 <div class="lang-icon" id="lng-de" style="background: url(img/de.png);"></div>
@@ -41,14 +41,16 @@
                 <h1>Tehnos Catalog Browser</h1>
                 <div data-role="navbar" class="navbar" data-iconpos="left">
                     <ul>
-                        <li><a href="#" id="tab_1" data-icon="grid">UNIVERZALI mulčer</a></li>
-                        <li><a href="#" id="tab_2" data-icon="grid">BOČNI mulčer + KOMBINACIJE</a></li>
-                        <li><a href="#" id="tab_3" data-icon="grid">TRAVNIŠKI mulčer + NAMENSKI mulčer</a></li>
+                        <li><a href="#" id="tab_0">TEHNOS</a></li>
+                        <li><a href="#" id="tab_1">UNIVERZALI mulčer</a></li>
+                        <li><a href="#" id="tab_2">BOČNI mulčer + KOMBINACIJE</a></li>
+                        <li><a href="#" id="tab_3">TRAVNIŠKI mulčer + NAMENSKI mulčer</a></li>
+                        <li><a href="#" id="tab_4">Obdelava polj</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div data-role="content" data-theme="a">
+            <div data-role="content">
                 <div id="table1-container">
                     <div id="table1-images-container">
                         <div class="table1-img">
@@ -1635,38 +1637,34 @@
         </div>
 
         <!-- CATALOG PAGE -->
-        <div data-role="page" id="catalog-page" data-theme="b">
+        <div data-role="page" id="catalog-page">
             <div data-role="header">
-                <!--<a href="#" data-icon="back" data-rel="back">Nazaj</a>-->
-                <a data-icon="arrow-l" href="javascript:window.location = '#tables-page'">Back</a>
+                <a data-icon="arrow-l" href="#tables-page" data-transition="none">Nazaj</a>
+                <div class="lang-icon" id="lng-en" style="background: url(img/gb.png);"></div>
+                <div class="lang-icon" id="lng-de" style="background: url(img/de.png);"></div>
+                <div class="lang-icon" id="lng-si" style="background: url(img/si.png);"></div>
                 <h1>Tehnos Catalog Browser</h1>
             </div>
             <div class="flipbook-viewport">
                 <div class="flipbook_2">
-                    <div id="page1" style="background-image:url(pages/page_1.jpg)"></div>
-                    <div id="page2" style="background-image:url(pages/page_2.jpg)">
-                    <a href="#popupVideo" data-rel="popup" data-position-to="window" class="video-iconn ui-btn ui-corner-all ui-shadow ui-btn-inline"></a>
-                    <!--<a class="video-icon" href="#popupVideo" data-rel="popup" data-position-to="window"></a>--></div>
-                    <div id="page3" style="background-image:url(pages/page_3.jpg)"></div>
-                    <div id="page4" style="background-image:url(pages/page_4.jpg)"></div>
-                    <div id="page5" style="background-image:url(pages/page_5.jpg)"></div>
-                    <div id="page6" style="background-image:url(pages/page_1.jpg)"></div>
-                    <div id="page7" style="background-image:url(pages/page_2.jpg)"></div>
+                    <div id="page1" style="background-image:url(pages/si/page_1.jpg)"></div>
+                    <div id="page2" style="background-image:url(pages/si/page_2.jpg)">
+                        <a href="#popupVideo" data-rel="popup" data-position-to="window" class="video-ikona ui-btn ui-btn-inline"></a>
+                    </div>
+                    <div id="page3" style="background-image:url(pages/si/page_3.jpg)"></div>
+                    <div id="page4" style="background-image:url(pages/si/page_4.jpg)"></div>
+                    <div id="page5" style="background-image:url(pages/si/page_5.jpg)"></div>
+                    <div id="page6" style="background-image:url(pages/si/page_1.jpg)"></div>
+                    <div id="page7" style="background-image:url(pages/si/page_2.jpg)"></div>
                 </div>
             </div>
 
+            <!-- VIDEO POPUP -->
             <div data-role="popup" id="popupVideo" data-overlay-theme="b" data-theme="a" data-tolerance="15,15" class="ui-content">
-                <video width="560" height="315" controls autoplay="autoplay">
-                    <source src="videos/Tehnos MGL 220.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
+                <video width="910" height="510" controls autoplay="autoplay">
+                    <source src="videos/video_1.mp4" type="video/mp4">
                 </video>
             </div>
         </div>
-
-        <!-- VIDEO POPUP
-        <div data-role="popup" id="popupVideo" data-overlay-theme="a" data-theme="d" data-tolerance="15,15" class="ui-content">
-            <iframe src="http://player.vimeo.com/video/41135183" width="497" height="298" seamless></iframe>
-        </div>-->
-
     </body>
 </html>
